# sample-hyperapp

./: .gitignore  Cargo.toml  README.md  metadata.json
pkg/: manifest.json  skeleton-app.wasm
pkg/ui/: index.html
pkg/ui/assets/: index-D3jxLX2h.js  index-D3jxLX2h.js.map  index-DfjMiUFX.js  index-DfjMiUFX.js.map  index-_rEXckFr.css
resources/: README.md
resources/example-apps/: TODO.md
resources/guides/: 00-QUICK-REFERENCE.md  01-COMMON-PATTERNS.md  02-TROUBLESHOOTING.md  03-WIT-TYPES-DATA-MODELING.md  04-P2P-PATTERNS.md  08-MANIFEST-AND-DEPLOYMENT.md  09-CAPABILITIES-GUIDE.md  10-SQLITE-API-GUIDE.md  README.md
skeleton-app/: Cargo.toml
skeleton-app/src/: lib.rs
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx
ui/src/store/: skeleton.ts
ui/src/types/: api.ts  caller-utils.d.ts
ui/src/utils/: api.ts
