[dependencies]
anyhow = "1.0"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.caller-utils]
optional = true
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
path = "../../hyperprocess-macro"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
git = "https://github.com/hyperware-ai/process_lib"
rev = "b9f1ead"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "skeleton-app"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
